@@ -5,6 +5,11 @@
 
 using namespace Rcpp;
 
+#ifdef RCPP_USE_GLOBAL_ROSTREAM
+Rcpp::Rostream<true>&  Rcpp::Rcout = Rcpp::Rcpp_cout_get();
+Rcpp::Rostream<false>& Rcpp::Rcerr = Rcpp::Rcpp_cerr_get();
+#endif
+
 // mergePeaks
 Rcpp::DataFrame mergePeaks(Rcpp::DataFrame data, int maxGap);
 RcppExport SEXP _DiffBind_mergePeaks(SEXP dataSEXP, SEXP maxGapSEXP) {
